# ProClean_Organizer

./: CMakeLists.txt  main.c
Asset/: HapusData.txt  HelloAdmin!.txt  LihatData.txt  MenuData.txt  MenuJenisLayanan.txt  MenuJenisPetugas.txt  MenuKendaraan.txt  MenuLayanan.txt  MenuPelanggan.txt  MenuPembayaran.txt  MenuPetugas.txt  MenuPktLayanan.txt  MenuPromo.txt  ProCleanV2.txt  TambahData.txt  UbahData.txt  ikonsapu.txt
Interface/: Design.h  MenuAdmin.h  lib.h
Source/: DashBoardOwer.h  Dashboard.h  DashboardKasir.h  DashboardMenuAdmin.h  DashboardOwner.h  Deklarasi.h  Login.h  Tampilan.h
Source/CRUD MASTER/CRUD MASTER JENIS KENDARAAN/: CreateJenisKendaraan.h  DeleteJenisKendaraan.h  ReadJenisKendaraan.h  UpdateJenisKendaraan.h
Source/CRUD MASTER/CRUD MASTER JENIS LAYANAN/: CreateJnsLayanan.h  DeleteJnsLayanan.h  ReadJnsLayanan.h  UpdateJnsLayanan.h
Source/CRUD MASTER/CRUD MASTER JENIS PEMBAYARAN/: CreatePembayaran.h  DeletePembayaran.h  ReadPembayaran.h  UpdatePembayaran.h
Source/CRUD MASTER/CRUD MASTER JENIS PETUGAS/: Create Jenis Petugas.h  DeleteJenisPetugas.h  ReadJenisPetugas.h  UpdateJenisPetugas.h
Source/CRUD MASTER/CRUD MASTER LAYANAN/: CreateLayanan.h  DeleteLayanan.h  ReadLayanan.h  UpdateLayanan.h
Source/CRUD MASTER/CRUD MASTER PAKET LAYANAN/: CreatePktLayanan.h  DeletePktLayanan.h  ReadPktLayanan.h  UpdatePktLayanan.h
Source/CRUD MASTER/CRUD MASTER PELANGGAN/: CreatePelanggan.h  DeletePelanggan.h  ReadPelanggan.h  UpdatePelanggan.h
Source/CRUD MASTER/CRUD MASTER PETUGAS/: CreatePetugas.h  DeletePetugas.h  ReadPetugas.h  UpdatePetugas.h
Source/CRUD MASTER/CRUD MASTER PROMO/: CreatePromo.h  DeletePromo.h  ReadPromo.h  UpdatePromo.h
Source/LAPORAN/: laporanTransaksiPembersihanRumah.h
Source/TRANSAKSI/TRANSAKSI PEMBERSIHAN KENDARAAN/: CreateTransaksiPembersihanKendaraan.h  ReadTransaksiPembersihanKendaraan.h
Source/TRANSAKSI/TRANSAKSI PEMBERSIHAN RUMAH/: CreateTransaksiPembersihanRumah.h  ReadTransaksiPembersihanRumah.h
Source/TRANSAKSI/TRANSAKSI PENJADWALAN PETUGAS/: CreateTransaksiPenjadwalanPetugas.h
